preference updated
